:bug: Fixed field has no margin-bottom on mobile, select now 100% width in form.sass instead of dropdown.sass

--- a/src/partials/collections/_form.sass
+++ b/src/partials/collections/_form.sass
@@ -183,7 +183,16 @@
 .ts.form .fields:last-child .field
     margin-bottom: 0em
     
-.ts.form .field input:not([type="radio"])
++rwd-serious(mobile)
+    .ts.form .fields:last-child .field
+        margin: $form_fieldMargin
+        
+        &:last-child
+            margin-bottom: 0
+        
+.ts.form .field input:not([type="radio"]),
+.ts.form .field textarea,
+.ts.form .field select
     width: 100%
 
 //-------------------//
